--- a/client/src/Components/Quiz.css
+++ b/client/src/Components/Quiz.css
@@ -13,7 +13,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: black;
-  margin: 5px;
+  box-sizing: border-box;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
